--- a/view/user/cart.ejs
+++ b/view/user/cart.ejs
@@ -75,6 +75,13 @@
                 </td>
               </tr>
               <% } %>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td><h5>Subtotal</h5></td>
+                <td class="sub-total">₹ <span id="total"></span></td>
+              </tr>
 
 
               <!-- <tr class="shipping_area">
@@ -120,10 +127,10 @@
               </tr> -->
             </tbody>
           </table>
-          <div style="text-align: right;">
+          <!-- <div style="text-align: right;">
             <h5>Subtotal: ₹ <span id="total"></span></h5>
 
-          </div>
+          </div> -->
           <div class="checkout_btn_inner float-right">
             <a class="btn_1" href="/shop">Continue Shopping</a>
             <a class="btn_1 checkout_btn_1" href="/checkout">Proceed to checkout</a>
